RESOLVED FIXED 241488
computeUnderlineOffset should not take InlineIterator::LineBoxIterator
https://bugs.webkit.org/show_bug.cgi?id=241488
Summary computeUnderlineOffset should not take InlineIterator::LineBoxIterator
alan baradlay
Reported 2022-06-09 13:55:20 PDT
ssia
Attachments
Patch (8.67 KB, patch)
2022-06-09 14:00 PDT, alan baradlay
no flags
alan baradlay
Comment 1 2022-06-09 14:00:07 PDT
Antti Koivisto
Comment 2 2022-06-10 05:39:05 PDT
Comment on attachment 460143 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=460143&action=review > COMMIT_MESSAGE:10 > +* Source/WebCore/style/InlineTextBoxStyle.cpp: This stuff in the wrong directory btw, it should be in rendering (or hypothetical /paint or /display).
alan baradlay
Comment 3 2022-06-10 06:21:55 PDT
(In reply to Antti Koivisto from comment #2) > Comment on attachment 460143 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=460143&action=review > > > COMMIT_MESSAGE:10 > > +* Source/WebCore/style/InlineTextBoxStyle.cpp: > > This stuff in the wrong directory btw, it should be in rendering (or > hypothetical /paint or /display). totally!
EWS
Comment 4 2022-06-10 08:19:53 PDT
Committed r295453 (251459@main): <https://commits.webkit.org/251459@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460143 [details].
Radar WebKit Bug Importer
Comment 5 2022-06-10 08:20:25 PDT
Note You need to log in before you can comment on or make changes to this bug.